# Integrated-Health-Systems-Analytics-Platform-IHSA-

./: CHANGELOG.md  Makefile  README.md  app.py  pyproject.toml  requirements.txt
analytics/: base.py  predictive.py  spec_augment.py
api/: __init__.py  main.py
authentication/: rbac.py
backend/: README.md
config/: __init__.py  logging_config.py  settings.py
database/: models.py
docker/: Dockerfile  Dockerfile.api  docker-compose.yml
docs/: IHSA_Bayesian_Methodology_and_Model_Specification.docx  IHSA_Definitive_Methodology.docx  IHSA_Expanded_Methodology_Scenarios.docx  IHSA_Methodology_and_Model_Specification.docx  IHSA_Missing_Data_Imputation_Framework.docx  IHSA_Variable_Screening_Report.docx  architecture.md  index.md  modules.md  predictor_catalogue.csv  predictor_screening.csv  roadmap.md
etl/: __init__.py  base.py  clients.py
forecasting/: __init__.py  base.py
frontend/: README.md
gis/: service.py
notebooks/: README.md
reporting/: __init__.py  service.py
scenario_engine/: __init__.py  base.py  bayes_engine.py  bayes_networks.py  engine.py  inverse.py  predictor_spec.py  registry.py
scripts/: README.md  generate_bayes_panels.py  generate_child_survival_panel.py  generate_diagrams.py  generate_hiv_panel.py  impute_demo.py  mine_data.py  mine_his_maturity.py  predictor_catalogue.py  run_bayes_scenarios.py  screen_predictors.py  seed_master_data.py  selftest.py
streamlit/: app.py
tests/: test_bayes.py  test_child_survival.py  test_etl.py  test_forecasting.py  test_imputation.py  test_master_data.py  test_scenario_engine.py
(+24 files in other folders)
