[project]
name = "ihsa"
version = "0.1.0"
description = "Integrated Health Systems Analytics Platform (IHSA) — WHO AFRO"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "WHO AFRO IHSA Team" }]
dependencies = [
  "streamlit>=1.36",
  "pandas>=2.1",
  "numpy>=1.26",
  "plotly>=5.18",
  "openpyxl>=3.1",
  "requests>=2.31",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
analytics = ["scikit-learn>=1.4", "statsmodels>=0.14", "joblib>=1.3"]
reporting = ["python-docx>=1.1"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["frontend", "notebooks", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["config", "etl", "warehouse", "scenario_engine", "forecasting",
            "analytics", "reporting", "api"]
